Fix broken style

--- a/wwwroot/help/css/custom.css
+++ b/wwwroot/help/css/custom.css
@@ -148,6 +148,9 @@ h2 {
 }
 
 .partners img {
+  width: 160px !important;
+  margin-bottom: 30px;
+  align-content: center;
   vertical-align: middle;
 }
 
